authentication login added

--- a/app/views/courses/index.html.erb
+++ b/app/views/courses/index.html.erb
@@ -14,4 +14,13 @@
 			<br><br>
 		<% end %>
 </div>
-<%= link_to 'Add Course', new_course_path %>	
+<%= link_to 'Add Course', new_course_path %>
+
+<div class="container">
+	<% if current_user %>
+		<%= link_to 'Logout', logout_path, method: "delete" %>
+	<% else %>
+		<%= link_to 'Login In', login_path %>
+		<%= link_to 'Sign Up', signup_path %>
+	<% end %>
+</div>
