--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,14 +1,45 @@
 <!DOCTYPE html>
 <html>
 <head>
+
+<nav class="navbar navbar-inverse navbar-fixed-top">
+  
+  <div class="container-fluid">
+    <div class="navbar-header">
+      <a class="navbar-brand" href="/">
+        <img alt="Group Up" src="#">
+      </a>
+    </div>
+     
+     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+      <ul class="nav navbar-nav">
+        <li class="active"><a href="/courses">Courses <span class="sr-only">(current)</span></a></li> 
+          <% if current_user %>
+            <p class="navbar-text"><%= current_user.email %></p>
+            <li><%= link_to 'Logout', logout_path, method: "delete" %></li>
+          <% else %>
+            <li><%= link_to 'Login', login_path %></li>
+            <li><%= link_to 'Sign Up', signup_path %></li>
+          <% end %>
+      </ul>
+      <% if current_user %>
+      <% end %>
+  </div>
+
+</nav>
+
+
   <title>MyApp</title>
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
 </head>
-<body>
 
+
+<body>
 <%= yield %>
+
 
 </body>
 </html>
+
